force-app/main/default/objects/ExactTargetBacklog__c/ExactTargetBacklog__c.object-meta.xml
<CustomObject>
    <label>Exact Target Backlog</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exact Target Backlogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>