force-app/main/default/objects/ExactTargetBacklog__c/fields/EmailContentJSON__c.field-meta.xml
<CustomField>
    <fullName>EmailContentJSON__c</fullName>
    <label>Email Content JSON</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>