force-app/main/default/objects/ExactTargetBacklog__c/fields/IsBatchEmail__c.field-meta.xml
<CustomField>
    <fullName>IsBatchEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Batch Email</label>
    <type>Checkbox</type>
</CustomField>